# LearnOpenGL

./: .gitignore  CMakeLists.txt  Camera.h  Model.h  README.md  Shader.cpp  Shader.h  main.cpp
Notes/10_DepthTest_StencilTest_Blend/Blend/: 1_GrassBlending.md  2_TransparentWindow.md
Notes/10_DepthTest_StencilTest_Blend/DepthTest/: DepthTest.md
Notes/11_Culling_FrameBuffer/Culling/: Culling.md  (+1 more)
Notes/12_Cubemaps/: 1_skybox.md  2_reflection.md  3_refraction.md  practice.md
Notes/14_GeometryShader/: 1_house.md  2_explosion.md  3_draw_normal.md
Notes/1_Shader_VAO_VBO_EBO/: 1.1_draw_triangle_VAO_VBO.md  1.2_draw_rectangle_EBO(IBO).md
Notes/20_DeferredShading/: DeferredShading_1.md
Notes/21_SSAO/: ssao.md
Notes/2_Shaders/: 2.1_uniform.md  2.2_layout(location=x).md  2.3_read_shader_files.md
Notes/3_Textures/: 3.1_TextureMapping.md  3.2_TextureUnit.md
Notes/5_Camera/: 5.1_CameraRotation.md  5.2_Camera.md  5.3_CameraClass.md
Notes/6_Lights_Colors/: 6.1_LightCube.md  6.2_PhongModel.md
Notes/8_LightCasters/: 8.1_DirectionalLight.md  8.2_PointLight.md  8.3_Spotlight.md  8.4_MultipleLights.md
Notes/9_LoadModels/: 9.1_MeshClass.md  9.2_ModelClass.md  9.3_DrawModel.md  practice_DrawModelAdvanced.md
dependencies/src/: glad.c
shaders/: fragmentShader.fs  light_fragmentShader.fs  light_vertexShader.vs  modelLoading.fs  modelLoading.vs  vertexShader.vs
shaders/Advanced_Lighting/: blinnphong.fs
shaders/Framebuffer/: grayscale.fs  kernel.fs  kernel_2.fs  kernel_3.fs
shaders/GeometryShader/: geometryShader.gs  loadModel_geo_explosion.gs  loadModel_geo_explosion.vs
shaders/Normal_Parallax_Mapping/: normal_mapping.fs  parallax_mapping.fs  parallax_mapping.vs
shaders/SSAO/: ssao.fs  ssao_geometry.fs  ssao_lighting.fs
shaders/ShadowMapping/: shadow_mapping.fs  shadow_mapping_depth.vs
shaders/Tests/: fragmentShader_DepthTest.fs  vertexShader_Tests.vs
shaders/gamma_correction/: gamma_correction.fs
shaders/skybox/: loadModel_all.fs  loadModel_skybox.fs  skybox.vs
(+72 files in other folders)
